# ai-customer-support-agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  SETUP.md  requirements.txt
.claude/: settings.local.json
.devin/: rules.md
.devin/workflows/: session-logger.md
backend/: .env.example  pyproject.toml
backend/.claude/: ralph-loop.local.md
backend/app/: config.py  db.py  main.py  models.py
backend/app/agent/: graph.py  llm.py  prompts.py
backend/app/engine/: eligibility.py
backend/app/policy/: __init__.py  refund_policy.md
backend/app/tools/: tools.py
backend/app/trace/: tracer.py
backend/data/seed/: customers.json
backend/scripts/: seed_db.py
backend/tests/: conftest.py  test_adversarial.py  test_e2e.py  test_eligibility.py
docs/: 01_REQUIREMENTS.md  02_SOLUTION_IDEA.md  03_IMPLEMENTATION_PLAN.md
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  api.ts
frontend/src/components/: AdminDashboard.tsx  ChatWindow.tsx  DecisionBadge.tsx  TraceStepCard.tsx
guide/: index.html
guide/app/: package-lock.json  package.json
guide/app/src/: App.tsx
guide/content/: 01-what-is-ai.md  02-how-llms-work.md  03-tool-calling.md  04-agent-loops.md  05-prompt-engineering.md  06-deterministic-engines.md  07-tracing-observability.md  08-project-architecture.md  09-fastapi.md  10-langgraph.md  11-langchain-tools.md  12-pydantic.md  13-react-tailwind.md  14-defense-in-depth.md
logs/: FULL_SESSION_LOG.md  session_logger.py
logs/sessions/: session_20260610_011653.md  session_20260610_014306.md  session_20260610_021501.md
(+3 files in other folders)
