[project]
name = "ai-refund-agent"
version = "0.1.0"
description = "AI Customer Support Agent — E-commerce Refund Automation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "sqlmodel>=0.0.22",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "openai>=1.60",
    "anthropic>=0.42",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "httpx>=0.28",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
